Fixed a nesting issue The issue caused unintended overlap between boxes It also caused certain aligning methods to not work properly

--- a/style.css
+++ b/style.css
@@ -2,27 +2,27 @@ body{
     align-items: center;
     margin: 0;
 }
+.htop{
+    display: flex;
+    gap: 20px;
+}
 .header{
     background-color: #1f2937;
     color: #f9faf8;
     display: flex;
-    height: 500px;
+    height: 100px;
+    padding-bottom: 100px;
 }
+
 .maincontent{
     display: flex;
     flex-direction: column;
-    padding-left: 450px;
 }
 .mainimg{
-    display: flex;
-    flex: 1;
     gap: 40px;
+    padding-bottom: 100px;
     align-items: center;
-}
-.headtop{
-    display: flex;
-    align-items: space-between;
-    gap: 20px;
+    justify-content: center;
 }
 .h1{
     font-size: 48px;
@@ -36,9 +36,10 @@ body{
     margin-bottom: 10px;
 }
 
-.main{
+.mainimg{
     background-color: #1f2937;
     color: #f9faf8;
+    display: flex;
 }
 .maincontent button{
     font-weight: bold;
@@ -47,7 +48,7 @@ body{
     padding: 10px;
     padding-left: 15px;
     padding-right: 15px;
-    border-radius: 10px;
+    border-radius: 8px;
 }
 .galtop{
     font-size: 30px;
